Fix width of thumbnails caption to avoid overflow

--- a/res/mobile_main_page.css
+++ b/res/mobile_main_page.css
@@ -87,7 +87,7 @@ h2 {
 .item figcaption {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: calc(100% - 1.2em); /* remove left/right padding */
     vertical-align: bottom;
     background: rgba(48, 48, 48, 0.5);
     color: white;
